--- a/docs/paper/paper.tex
+++ b/docs/paper/paper.tex
@@ -1,5 +1,4 @@
 \documentclass{article}
-% \documentclass[UTF8]{article}
 \usepackage{graphicx}
 \usepackage{float}
 \usepackage{amsmath}
@@ -7,7 +6,7 @@
 \usepackage{hyperref}
 \usepackage{xcolor}
 \usepackage{todonotes}
-\usepackage{subfigure}
+\usepackage{subfig}
 \usepackage{caption}
 \usepackage[ruled]{algorithm2e}
 \title{Face Image Fitting\footnote{This is the first time we try to write the course project report in English. Your understanding is much appreciated.}}
@@ -37,20 +36,26 @@ A large proportion of images people uploaded is facial images. Motivated by this
 The first one is to substitute the mouth in one image to another. The second one is to provide accessible way to edit face.
 \begin{figure}
     \centering
-    \begin{subfigure}[t]{0.5\textwidth}
-        \centering
-        \includegraphics{./img/app11}
-    \end{subfigure}
-    \begin{subfigure}[t]{0.5\textwidth}
-        \centering
-        \includegraphics{./img/app12}
-    \end{subfigure}
+    \subfloat[]{\includegraphics[width=0.4\textwidth]{./img/app11}}
+    \hfill
+    \subfloat[]{\includegraphics[width=0.4\textwidth]{./img/app12}}
+    \caption{One application of face fitting is to transfer the smile from face (a) to face (b)}
 \end{figure}
+\begin{figure}
+    \centering
+    \subfloat[]{\includegraphics[width=0.4\textwidth]{./img/app21}}
+    \hfill
+    \subfloat[]{\includegraphics[width=0.4\textwidth]{./img/app22}}
+    \caption{Another application of face fitting is to easily manipulate the face image without much artifact.}
+\end{figure}
+
 \subsection{Structure of the report}
-In the following parts of the report, we will first introduce different basic components related to facial animation we have implemented. Then we will talk about different interesting facial animation application using some of basic components we have implemented. At the end of the report, we will discuss further possible improments of our project.
-
+In this report, we will first introduce the core part of this project, i.e. to reconstruct the 3D face model from a single image. Then we will introduce pipelines of two applications and their underlying techniques. Lastly, we will discuss further possible improvements of this project.
+     
 \input{fit_model.tex}
-\input{mesh_deformation.tex}
+% \input{mesh_deformation.tex}
 
+\bibliographystyle{apalike}
+\bibliography{ref}
 
 \end{document}
