--- a/docs/paper/fit_model.tex
+++ b/docs/paper/fit_model.tex
@@ -40,6 +40,8 @@ Set $\mathbf{w} = \mathbf{0}$\;
 \end{algorithm}
 Finding the optimal $\mathbf{w}_{\text{id}}, \mathbf{w}_{\text{expr}}$ with $s, \mathbf{R}, \mathbf{t}$ fixed is a simple regularized least square problem. Finding the optimal $s, \mathbf{R}, \mathbf{t}$ with $\mathbf{w}_{\text{id}}, \mathbf{w}_{\text{expr}}$ fixed is a classical problem in computational photography and can be solved by POSIT algorithm\cite{dementhon1995model}.
 
+\section{Application 1: Expression Flow for 3D-Aware Face
+Component Transfer}
 
 \section{Joint fitting of the model}
 In some scenerios where we want to fit models for the same person that appeared in multiple images at the same time. We will need to fit the same identity weights $\mathbf{w}^{\text{id}}$ and fit the expression weights $\mathbf{w}^{\text{expr}}$ for different images. We adapt the previous algorithm as follows.
