update doc framework

--- a/docs/paper/paper.tex
+++ b/docs/paper/paper.tex
@@ -3,12 +3,17 @@
 \usepackage{float}
 \usepackage{amsmath}
 \usepackage{amssymb}
+\usepackage{amsfonts}
 \usepackage{hyperref}
 \usepackage{xcolor}
 \usepackage{todonotes}
 \usepackage{subfig}
 \usepackage{caption}
 \usepackage[ruled]{algorithm2e}
+
+\newcommand{\D}{\mathbf{D}}
+\newcommand{\Q}{\mathbf{Q}}
+\DeclareMathOperator{\tr}{tr}
 \title{Face Image Fitting\footnote{This is the first time we try to write the course project report in English. Your understanding is much appreciated.}}
 \author{Kangcheng Hou\footnote{kangchenghou@gmail.com} \and Shuqi Wang\footnote{wangshuqi.cn@gmail.com} \and Tianhao Wei \footnote{phi.wth@gmail.com}}
 \date{\today}
@@ -53,9 +58,10 @@ The first one is to substitute the mouth in one image to another. The second one
 In this report, we will first introduce the core part of this project, i.e. to reconstruct the 3D face model from a single image. Then we will introduce pipelines of two applications and their underlying techniques. Lastly, we will discuss further possible improvements of this project.
      
 \input{fit_model.tex}
-% \input{mesh_deformation.tex}
-
+\input{expression_flow.tex}
+\input{face_editing.tex} 
+\input{summary.tex}
 \bibliographystyle{apalike}
 \bibliography{ref}
-
+  
 \end{document}
