--- a/docs/paper/paper.tex
+++ b/docs/paper/paper.tex
@@ -15,7 +15,7 @@
 \newcommand{\Q}{\mathbf{Q}}
 \DeclareMathOperator{\tr}{tr}
 \title{Face Image Fitting\footnote{This is the first time we try to write the course project report in English. Your understanding is much appreciated.}}
-\author{Kangcheng Hou\footnote{kangchenghou@gmail.com} \and Shuqi Wang\footnote{wangshuqi.cn@gmail.com} \and Tianhao Wei \footnote{phi.wth@gmail.com}}
+\author{Kangcheng Hou\footnote{kangchenghou@gmail.com} \and Shuqi Wang\footnote{shuqiwang.cn@gmail.com} \and Tianhao Wei \footnote{phi.wth@gmail.com}}
 \date{\today}
  
 
@@ -63,5 +63,5 @@ In this report, we will first introduce the core part of this project, i.e. to r
 \input{summary.tex}
 \bibliographystyle{apalike}
 \bibliography{ref}
-  
+ 
 \end{document}
