--- a/docs/paper/ref.bib
+++ b/docs/paper/ref.bib
@@ -24,16 +24,6 @@
   year={2011},
   publisher={ACM}
 }
-@article{zhou2017computer,
-  title={Computer Graphics 2.0: towards end-user-generated contents},
-  author={Zhou, Kun},
-  journal={Frontiers of Computer Science},
-  volume={11},
-  number={5},
-  pages={743--745},
-  year={2017},
-  publisher={Springer}
-}
 @inproceedings{sorkine2004laplacian,
   title={Laplacian surface editing},
   author={Sorkine, Olga and Cohen-Or, Daniel and Lipman, Yaron and Alexa, Marc and R{\"o}ssl, Christian and Seidel, H-P},
@@ -81,4 +71,14 @@
   pages={123--141},
   year={1995},
   publisher={Springer}
+}
+@article{agarwala2004interactive,
+  title={Interactive digital photomontage},
+  author={Agarwala, Aseem and Dontcheva, Mira and Agrawala, Maneesh and Drucker, Steven and Colburn, Alex and Curless, Brian and Salesin, David and Cohen, Michael},
+  journal={ACM Transactions on Graphics (ToG)},
+  volume={23},
+  number={3},
+  pages={294--302},
+  year={2004},
+  publisher={ACM}
 }
