--- a/docs/paper/paper.tex
+++ b/docs/paper/paper.tex
@@ -14,7 +14,7 @@
 \newcommand{\D}{\mathbf{D}}
 \newcommand{\Q}{\mathbf{Q}}
 \DeclareMathOperator{\tr}{tr}
-\title{Face Image Fitting\footnote{This is the first time we try to write the course project report in English. Your understanding is much appreciated.}}
+\title{Face Image Fitting and Its Applications\footnote{This is the first time we try to write the course project report in English. Your understanding is much appreciated.}}
 \author{Kangcheng Hou\footnote{kangchenghou@gmail.com} \and Shuqi Wang\footnote{shuqiwang.cn@gmail.com} \and Tianhao Wei \footnote{phi.wth@gmail.com}}
 \date{\today}
  
@@ -59,7 +59,8 @@ In this report, we will first introduce the core part of this project, i.e. to r
      
 \input{fit_model.tex}
 \input{expression_flow.tex}
-\input{face_editing.tex} 
+\input{face_editing.tex}
+\input{code_structure.tex}
 \input{summary.tex}
 \bibliographystyle{apalike}
 \bibliography{ref}
