--- a/docs/paper/summary.tex
+++ b/docs/paper/summary.tex
@@ -6,10 +6,8 @@ In this project, we have implemented the following:
 \item Poisson Image Editing \cite{perez2003poisson}
 \item Formulate our problem into graph cut\cite{yang2011expression} and solve it using GCO library \cite{boykov2004experimental}
 \item ARAP shape manipulation \cite{igarashi2005rigid}
-\item \textbf{Combine the above all together}
 \end{itemize}
-Based on these techniques we have implemented, we build two interesting applications. The first one is facial component transfer and the second one is easy face editing.
-
+Most importantly, we integate the techniques above to make two interesting applications.
  
 
     
