add viewer using libigl

--- a/docs/paper/code_structure.tex
+++ b/docs/paper/code_structure.tex
@@ -5,5 +5,6 @@ The code structure is as follows:
 \item \texttt{src/fitmodel} contains the code of implementation of single image fitting and joint shape fitting, described in \cite{yang2011expression}.
 \item \texttt{src/seamless\_composite} contains the code of implementation of seamless compositing of two images, described in \cite{agarwala2004interactive}.
 \item \texttt{src/poisson\_blend} contains the code of implementation of poisson image editing, described in \cite{perez2003poisson}.
+\item \texttt{src/laplacian} contains the code of laplacian mesh editing\cite{sorkine2004laplacian}. We refer to this repository for implementation of GUI.\footnote{https://github.com/alecjacobson/geometry-processing-deformation} 
 \item \texttt{src/demo} contains the code of two demos built on top of the techniques described above.
 \end{itemize}
