--- a/docs/paper/paper.tex
+++ b/docs/paper/paper.tex
@@ -55,8 +55,8 @@ The first one is to substitute the mouth in one image to another. The second one
 \end{figure}
 
 \subsection{Structure of the report}
-In this report, we will first introduce the core part of this project, i.e. to reconstruct the 3D face model from a single image. Then we will introduce pipelines of two applications and their underlying techniques. Lastly, we will discuss further possible improvements of this project.
-     
+In this report, we will first introduce the core part of this project, i.e. to reconstruct the 3D face model from a single image. Then we will introduce pipelines of two applications and their underlying techniques. Lastly, we will have a summary.
+      
 \input{fit_model.tex}
 \input{expression_flow.tex}
 \input{face_editing.tex}
